// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Save and Discard buttons but not translation dialog when new dashboard (no dashboard id) 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
    style="position: relative;"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 primary"
              data-test="save-dashboard-button"
              type="button"
            >
              Save changes
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Print preview
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Filter settings
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        />
        <div
          class="jsx-71743532 box"
        />
      </div>
      <span>
        <button
          class="jsx-2371629422 secondary"
          data-test="dhis2-uicore-button"
          type="button"
        >
          Exit without saving
        </button>
        <style>
          
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
        </style>
      </span>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  
  
</div>
`;

exports[`renders Translate, Delete, and Discard buttons when delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
    style="position: relative;"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 primary"
              data-test="save-dashboard-button"
              type="button"
            >
              Save changes
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Print preview
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Filter settings
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Translate
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="delete-dashboard-button"
              type="button"
            >
              Delete
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
      </div>
      <span>
        <button
          class="jsx-2371629422 secondary"
          data-test="dhis2-uicore-button"
          type="button"
        >
          Exit without saving
        </button>
        <style>
          
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
        </style>
      </span>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  <div
    class="mock-translation-dialog"
  />
</div>
`;

exports[`renders only the Go to Dashboards button when no update access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
    style="position: relative;"
  >
    <div
      class="controls"
    >
      <span>
        <button
          class="jsx-2371629422 secondary"
          data-test="dhis2-uicore-button"
          type="button"
        >
          Go to dashboards
        </button>
        <style>
          
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
        </style>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders the ActionsBar without Delete when no delete access 1`] = `
<div>
  <div
    class="editBar"
    data-test="edit-control-bar"
    style="position: relative;"
  >
    <div
      class="controls"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 primary"
              data-test="save-dashboard-button"
              type="button"
            >
              Save changes
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Print preview
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Filter settings
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <span>
            <button
              class="jsx-2371629422 "
              data-test="dhis2-uicore-button"
              type="button"
            >
              Translate
            </button>
            <style>
              
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
            </style>
          </span>
        </div>
        <div
          class="jsx-71743532 box"
        />
      </div>
      <span>
        <button
          class="jsx-2371629422 secondary"
          data-test="dhis2-uicore-button"
          type="button"
        >
          Exit without saving
        </button>
        <style>
          
                        span {
                            display: inline-flex;
                            pointer-events: all;
                            cursor: block;
                        }
                        span &gt; :global(button:disabled) {
                            pointer-events: none;
                        }
                    
        </style>
      </span>
    </div>
  </div>
  <div
    class="mock-filter-settings-dialog"
  />
  <div
    class="mock-translation-dialog"
  />
</div>
`;
